--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
+    "json-server": "^1.0.0-beta.1",
     "next": "14.2.4",
     "postcss": "8.4.38",
     "react": "18.3.1",
